src/main/java/org/example/error/ErrorHandler.java
package org.example.error;

public interface ErrorHandler {

	void handleLexerException(Exception exception);
}
